# geodatathon-spe-june26

./: .gitignore  README.md  inputs.example.toml  pyproject.toml  requirements.txt
docs/: D2-deck-outline.md  Kick-Off Webinar Transcripts.txt  TECHNICAL_REPORT.md  methodology-flowcharts.md  slides.md
docs/superpowers/plans/: 2026-06-05-thermogis-grid-and-multi-location-siting.md
docs/superpowers/specs/: 2026-06-03-geothermal-datathon-design.md  2026-06-05-thermogis-grid-and-multi-location-siting-design.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ChatDock.tsx  ComparisonTable.tsx  DecisionLog.tsx  DispatchChart.tsx  ErrorBoundary.tsx  HeadlineStrip.tsx  HelpDock.tsx  InputsPanel.tsx  MonteCarloChart.tsx  Panel.tsx  PercentilesChart.tsx  ReportPanel.tsx  ResourceMap.tsx  ScrubField.tsx  StatusBar.tsx  Tooltip.tsx  TornadoChart.tsx  fieldGroups.ts
frontend/src/hooks/: usePersistentState.ts  useResizable.ts  useShortcuts.ts
frontend/src/styles/: components.css  global.css  tokens.css
notebooks/: phase1_data_foundation.ipynb  phase1_data_foundation.py  phase2_resource_assessment.ipynb  phase2_resource_assessment.py  phase3_system_design.ipynb  phase3_system_design.py  phase4_techno_economics.ipynb  phase4_techno_economics.py
scripts/: build_deck.py
src/geothermal/: __init__.py  __main__.py  api.py  assumptions.py  cli.py  config.py  datasets.py  inputs.py  progress.py  report.py
src/geothermal/agent/: __init__.py  llm.py  narrate.py  workflow.py
src/geothermal/api/: __init__.py  routes.py  schemas.py  serialization.py  streaming.py
src/geothermal/design/: __init__.py  demand.py  system.py
src/geothermal/economics/: __init__.py  costs.py  lcoe.py  optimization.py  program_search.py  search.py  sensitivity.py  well_cost.py
src/geothermal/io/: __init__.py  excel_loader.py  las_loader.py  lithology_loader.py
tests/: test_agent.py  test_agent_llm.py  test_api.py  test_assessment.py  test_assumptions.py  test_cli.py  test_costs.py  test_datasets.py  test_demand.py  test_imputation.py  test_inputs.py  test_lcoe.py  test_loaders.py  test_optimization.py  test_power.py  test_program_search.py  test_progress.py  test_properties.py  test_report.py  test_reservoir.py  test_search.py  test_sensitivity.py  test_siting.py  test_spatial.py  test_survey.py  test_system.py  test_thermogis_grid.py  test_well_cost.py
(+19 files in other folders)
