[project]
name = "geothermal-datathon"
version = "0.1.0"
description = "SPE Africa Geothermal Datathon 2026 — Utrecht geothermal heating & cooling system design"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "lasio>=0.31",
    "openpyxl>=3.1",
    "matplotlib>=3.9",
    "plotly>=5.22",
    "pydantic>=2.7",
    "pykrige>=1.7",
    "pyarrow>=16.0",
]

[project.optional-dependencies]
notebook = ["jupyter>=1.0", "ipykernel>=6.29", "nbformat>=5.10"]
llm = [  # optional: conversational chat/narration over the results via OpenRouter
    "langchain>=0.3",
    "langchain-openrouter>=0.1",
]
web = [  # optional: the FastAPI backend for the demo app
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.1",
]
data = [  # optional: read the ThermoGIS regional NetCDF grids
    "xarray>=2024.0",
    "netCDF4>=1.6",
]

[project.scripts]
geo-datathon = "geothermal.cli:main"

[dependency-groups]
dev = ["ruff>=0.6", "pyright>=1.1.380", "pytest>=8.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geothermal"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# Exploratory analysis scripts (D1 notebooks) are exempt from strict library linting.
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY", "RUF"]
# Greek letters and math symbols (ρ, ΔT, η, µ…) are intentional scientific notation.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # netCDF4's prebuilt wheel is compiled against the numpy 1.x C ABI; importing it under
    # numpy 2 prints a harmless "ndarray size changed" RuntimeWarning. Reads work correctly
    # (the grid-vs-sheet test passes); we cannot rebuild the upstream wheel, so filter the
    # specific message rather than leave noise or suppress warnings globally.
    "ignore:numpy.ndarray size changed:RuntimeWarning",
    # FastAPI TestClient's httpx deprecation, transitive, not our code.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
